...
    case unwatchedSeries, unwatchedMovies, favoriteSeries, favoriteMovies

    var id: Int { rawValue }

    var title: String {
        switch self {
        case .watched: "Watched"
        case .toWatch: "Series to Watch"
        case .movieWatchlist: "Movie watchlist"
        case .recentSeries: "Series recently added"
        case .recentMovies: "Movies recently added"
        case .popularSeries: "Popular series"
        case .popularMovies: "Popular movies"
...
